# braingeneerspy

./: .copier-answers.yml  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  post_create.sh
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  publish-testpypi.yml  publish.yml
braingeneers/: __init__.py  analysis.py  buildnn.py  configure.py  dataloader.py  datasets.py  datasets_electrophysiology.py  datasets_electrophysiology_test.py  datasets_imaging.py  datasets_neuron.py  drylab.py  neuron.py  neuron_example.ipynb  wrapper.py
braingeneers/analysis/: __init__.py  analysis.py  analysis_test.py  make_spectrogram.py  visualize_maxwell.py
braingeneers/data/: __init__.py  cache_service.py  cache_service_test.py  datasets.py  datasets_electrophysiology.py  datasets_electrophysiology_test.py
braingeneers/data/mxw_h5_plugin/Mac_x86_64/: libcompression.dylib
braingeneers/data/test_data/: maxwell-metadata.expected.json  maxwell-metadata.old.json
braingeneers/iot/: __init__.py  messaging.py  messaging_test.py  new_messaging.py  new_messaging_test.py  pahomqtt.py  shadows.py  shadows_dev_playground.py  shadows_test.py  simple.py
braingeneers/ml/: __init__.py  ephys_dataloader.py  torch.py
braingeneers/test/: PCA test.py  unit_test.py
braingeneers/utils/: __init__.py  common_utils.py  configure.py  configure_test.py  data_access_objects.py  errors.py  memoize_s3.py  memoize_s3_test.py  messaging.py  numpy_s3_memmap.py
braingeneers/utils/s3wrangler/: __init__.py  s3wrangler_test.py
braingeneers/utils/smart_open/: __init__.py
braingeneers/utils/smart_open_braingeneers/: __init__.py  smart_open_braingeneers_test.py
docs/source/: conf.py  index.md
docs/source/utils/: range_cache_file.md
src/braingeneers/: __init__.py  _version.py
src/braingeneers/_compat/: __init__.py  typing.py
src/braingeneers/analysis/: README.md  __init__.py  analysis.py  analysis_test.py  visualize_maxwell.py
src/braingeneers/data/: __init__.py  datasets_electrophysiology.py  datasets_electrophysiology_test.py  datasets_fluidics.py  datasets_imaging.py  datasets_neuron.py
src/braingeneers/data/mxw_h5_plugin/Mac_arm64/: libcompression.dylib
src/braingeneers/iot/: __init__.py  authenticate.py  device.py  device_test.py  example_device.py  example_device_main.py  gui.py  messaging.py  messaging_test.py  shadows.py  shadows_dev_playground.py
src/braingeneers/mcp/: __init__.py  __main__.py  adapter.py  auth.py  bridge.py  iam.py  models.py  service_profiles.py  token_manager.py
src/braingeneers/ml/: ephys_dataloader.py
src/braingeneers/utils/: __init__.py  auth_endpoints.py  auth_storage.py  common_utils.py  common_utils_test.py  configure.py  memoize_s3.py  numpy_s3_memmap_test.py  oidc_tokens.py  range_cache_file.py
src/braingeneers/utils/s3wrangler/: __init__.py
tests/: common_utils.py  datasets_electrophysiology.py  generate_test_recordings.ipynb  generate_test_recordings.py  memoize_s3.py  messaging.py  mnist_ann.pt  numpy_s3_memmap.py  test-datasets.ipynb  test.ipynb  test_AnalysisFunctions.ipynb  test_BurstAnalysis.ipynb  test_MNIST.ipynb  test_analysis.py  test_auth_storage.py  test_common_utils.py  test_datasets.py  test_datasets_electrophysiology.py  test_decomp.ipynb  test_drylab.py  test_load_axion.ipynb  test_mcp.py  test_memoize_s3.py  test_messaging.py  test_neuron.ipynb  test_numpy_s3_memmap.py  test_numpys3memmap.py  test_package.py  test_range_cache_file.py  test_s3wrangler.py  test_shadows.py  test_smart_open_braingeneers.py  test_tca.ipynb  tests.py
tests/derived/test-datasets/: experiment.json  metadata.json
tests/integration/manual/: README.md  h5_streaming_cache_validation.py  local_s3_streaming_emulation.py  remote_s3_h5_range_cache_segments.py
tests/test_data/: maxwell-metadata.expected.json  maxwell-metadata.old.json
tests/utils/: test_messaging.py
